--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,23 @@ strong, b {
   color: inherit;
 }
 
-
 p {
   margin-bottom: 1rem;
 }
 
+/* Workshop program table column widths */
+.program-table th:nth-child(1),
+.program-table td:nth-child(1) {
+  width: 15%;
+  white-space: nowrap;
+}
+
+.program-table th:nth-child(2),
+.program-table td:nth-child(2) {
+  width: 60%;
+}
+
+.program-table th:nth-child(3),
+.program-table td:nth-child(3) {
+  width: 25%;
+}
