--- a/styles.css
+++ b/styles.css
@@ -9,19 +9,25 @@ p {
   margin-bottom: 1rem;
 }
 
-/* Workshop program table column widths */
+/* Force table to respect column sizing */
+.program-table {
+  table-layout: fixed;
+  width: 100%;
+}
+
 .program-table th:nth-child(1),
 .program-table td:nth-child(1) {
-  width: 20%;
+  width: 12%;
   white-space: nowrap;
 }
 
 .program-table th:nth-child(2),
 .program-table td:nth-child(2) {
-  width: 70%;
+  width: 68%;
 }
 
 .program-table th:nth-child(3),
 .program-table td:nth-child(3) {
-  width: 10%;
+  width: 20%;
 }
+
