--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 /* css styles */
 
 strong, b {
-  font-weight: 800;
-  color: inherit;
+  font-weight: 900;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
+
 
 p {
   margin-bottom: 1rem;
