--- a/styles.css
+++ b/styles.css
@@ -46,5 +46,15 @@ p {
   margin-bottom: 2rem !important;
 }
 
+/* Global link style: clean and academic */
+.content a {
+  text-decoration: none;
+  font-weight: 600;
+}
+
+/* Clear interaction feedback */
+.content a:hover {
+  text-decoration: underline;
+}
 
 
